--- a/test.html
+++ b/test.html
@@ -94,49 +94,195 @@
     <!-- Apps List -->
     <div class="apps-container">
         <div class="game-card" onclick="openPage('/static/embed.html#https://9anime.to')">
-            <img src="/appimage/apps/9anime.png" alt="9Anime">
-            <p>9Anime</p>
-        </div>
+        <img src="/appimage/apps/9anime.png" alt="9Anime">
+        <p>9Anime</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://amazon.com')">
-            <img src="/appimage/apps/amazon.png" alt="Amazon">
-            <p>Amazon</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://amazon.com')">
+        <img src="/appimage/apps/amazon.png" alt="Amazon">
+        <p>Amazon</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://buzzfeed.com')">
-            <img src="/appimage/apps/buzzfeed.png" alt="Buzzfeed">
-            <p>Buzzfeed</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://buzzfeed.com')">
+        <img src="/appimage/apps/buzzfeed.png" alt="Buzzfeed">
+        <p>Buzzfeed</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://coolmathgames.com')">
-            <img src="/appimage/apps/coolmath.png" alt="Coolmath Games">
-            <p>Coolmath</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://coolmathgames.com')">
+        <img src="/appimage/apps/coolmath.png" alt="Coolmath Games">
+        <p>Coolmath</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://discord.com')">
-            <img src="/appimage/apps/discord.jpg" alt="Discord">
-            <p>Discord</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://discord.com')">
+        <img src="/appimage/apps/discord.jpg" alt="Discord">
+        <p>Discord</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://disneyplus.com')">
-            <img src="/appimage/apps/disney-plus.png" alt="Disney Plus">
-            <p>Disney Plus</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://disneyplus.com')">
+        <img src="/appimage/apps/disney-plus.png" alt="Disney Plus">
+        <p>Disney Plus</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://duckduckgo.com')">
-            <img src="/appimage/apps/duckduckgo.png" alt="DuckDuckGo">
-            <p>DuckDuckGo</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://duckduckgo.com')">
+        <img src="/appimage/apps/duckduckgo.png" alt="DuckDuckGo">
+        <p>DuckDuckGo</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://espn.com')">
-            <img src="/appimage/apps/espn.webp" alt="ESPN">
-            <p>ESPN</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://espn.com')">
+        <img src="/appimage/apps/espn.webp" alt="ESPN">
+        <p>ESPN</p>
+    </div>
 
-        <div class="game-card" onclick="openPage('/static/embed.html#https://youtube.com')">
-            <img src="/appimage/apps/yt.png" alt="YouTube">
-            <p>YouTube</p>
-        </div>
+    <div class="game-card" onclick="openPage('/static/embed.html#https://facebook.com')">
+        <img src="/appimage/apps/facebook.png" alt="Facebook">
+        <p>Facebook</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://firefox.com')">
+        <img src="/appimage/apps/firefox.png" alt="Firefox">
+        <p>Firefox</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://flixhq.tv')">
+        <img src="/appimage/apps/flixhq.png" alt="FlixHQ">
+        <p>FlixHQ</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://geforce-now.com')">
+        <img src="/appimage/apps/geforce-now.png" alt="GeForce Now">
+        <p>GeForce Now</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://github.com')">
+        <img src="/appimage/apps/github.png" alt="GitHub">
+        <p>GitHub</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://google.com')">
+        <img src="/appimage/apps/google.png" alt="Google">
+        <p>Google</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://hbo.com')">
+        <img src="/appimage/apps/hbo.webp" alt="HBO">
+        <p>HBO</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://hulu.com')">
+        <img src="/appimage/apps/hulu.png" alt="Hulu">
+        <p>Hulu</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://instagram.com')">
+        <img src="/appimage/apps/instagram.png" alt="Instagram">
+        <p>Instagram</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://messenger.com')">
+        <img src="/appimage/apps/messenger.png" alt="Messenger">
+        <p>Messenger</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://nowgg.com')">
+        <img src="/appimage/apps/nowgg.png" alt="NowGG">
+        <p>NowGG</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://paramount.com')">
+        <img src="/appimage/apps/paramount.png" alt="Paramount">
+        <p>Paramount</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://pinterest.com')">
+        <img src="/appimage/apps/pinterest.png" alt="Pinterest">
+        <p>Pinterest</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://poki.com')">
+        <img src="/appimage/apps/poki.png" alt="Poki">
+        <p>Poki</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://reddit.com')">
+        <img src="/appimage/apps/reddit.png" alt="Reddit">
+        <p>Reddit</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://snapchat.com')">
+        <img src="/appimage/apps/snapchat.png" alt="Snapchat">
+        <p>Snapchat</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://soundcloud.com')">
+        <img src="/appimage/apps/soundcloud.jpg" alt="Soundcloud">
+        <p>SoundCloud</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://spotify.com')">
+        <img src="/appimage/apps/spotify.png" alt="Spotify">
+        <p>Spotify</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://telegram.com')">
+        <img src="/appimage/apps/telegram.png" alt="Telegram">
+        <p>Telegram</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://tiktok.com')">
+        <img src="/appimage/apps/tiktok.png" alt="TikTok">
+        <p>TikTok</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://tumblr.com')">
+        <img src="/appimage/apps/tumblr.png" alt="Tumblr">
+        <p>Tumblr</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://twitch.tv')">
+        <img src="/appimage/apps/twitch-tv.png" alt="Twitch">
+        <p>Twitch</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://twitter.com')">
+        <img src="/appimage/apps/twitter.png" alt="Twitter">
+        <p>Twitter</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://vscode.com')">
+        <img src="/appimage/apps/vscode.png" alt="VSCode">
+        <p>VSCode</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://wattpad.com')">
+        <img src="/appimage/apps/wattpad.webp" alt="Wattpad">
+        <p>Wattpad</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://whatsapp.com')">
+        <img src="/appimage/apps/whatsapp.png" alt="WhatsApp">
+        <p>WhatsApp</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://widgetbot.io')">
+        <img src="/appimage/apps/widgetbot.png" alt="Widgetbot">
+        <p>Widgetbot</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://y8.com')">
+        <img src="/appimage/apps/y8.png" alt="Y8">
+        <p>Y8</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://youtube.com')">
+        <img src="/appimage/apps/yt.png" alt="YouTube">
+        <p>YouTube</p>
+    </div>
+
+    <div class="game-card" onclick="openPage('/static/embed.html#https://zoroto.com')">
+        <img src="/appimage/apps/zoroto.webp" alt="Zoroto">
+        <p>Zoroto</p>
+    </div>
+
     </div>
 
     <script>
