--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ let tabCount = 1;
   </script>
   <script>function openApps() {
     const iframe = document.querySelector('.tab-iframe.active');
-    iframe.src = '/apps.html';
+    iframe.src = '/tabapps.html';
 }
 
 function openGames() {
