--- a/tabsapp.html
+++ b/tabsapp.html
@@ -287,7 +287,7 @@
   </div>
 
   <div class="content-wrapper" id="content-wrapper">
-    <iframe class="tab-iframe active" src="/static/index.html" onload="updateTabName(this)"></iframe>
+    <iframe class="tab-iframe active" src="/apps.html" onload="updateTabName(this)"></iframe>
   </div>
 
   <script>
